# kifi

./: Cargo.toml  README.MD
.github/workflows/: main.yml
src/: commands.rs  errors.rs  lib.rs  main.rs  output.rs
src/commands/: common.rs  helpers.rs  init.rs  metafiles.rs  preview.rs  snapshot.rs
