[package]
name = "kifi"
version = "0.4.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
regex = "1.10.2"
serde = "1.0.186"
serde_cbor = "0.11.2"
serde_derive = "1.0.188"
slice-diff-patch = "1.2.1"
