[package]
name = "kifi"
version = "0.4.9-alpha"
authors = ["Saurav S. Samantaray <sssamantaray77@gmail.com>"]
edition = "2021"
description = "A minimal Version Control System"
readme = "README.MD"
repository = "https://github.com/Vaurkhorov/kifi"
license = "MIT OR Apache-2.0"

[lib]
name = "kifi"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
glob = "0.3.1"
regex = "1.10.2"
serde = "1.0.186"
serde_cbor = "0.11.2"
serde_derive = "1.0.188"
slice-diff-patch = "1.2.1"
time = { version = "0.3.30", features = ["formatting"] }
